# shiyi-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  debug_memory.py  main.py  pyproject.toml  reproduce_reset.py
.claude/: settings.local.json
.omc/: project-memory.json
.omc/sessions/: 4b3d66db-309b-46bd-b37d-85f48d412b5e.json  ba0c0b80-8b0a-4f39-99c8-2c8550fe5c30.json
.omc/state/: agent-replay-4b3d66db-309b-46bd-b37d-85f48d412b5e.jsonl
agents/: __init__.py  base_agent.py  registry.py
agents/builtin/: __init__.py  code_assistant.py  general_qa.py
audio/: player.py  recorder.py
channels/: __init__.py  base.py  text_api_channel.py  text_cli_channel.py  voice_channel.py
channels/tui/: app.py  icons.py
config/: asound.conf  config.yaml  settings.py
core/: agent_core.py  agent_orchestration.py  assistant.py  complexity_detector.py  context_builder.py  orchestrator.py  session_manager.py
data/: kuzu.wal  sessions.db
docs/: 🏠 私人助理“小跟班” V1.0 系统设计方案.md
docs/plans/: 2026-02-12-shiyi-memory-system-design.md  2026-02-13-agent-intelligence-redesign.md  2026-02-13-agent-self-orchestration-refactor.md
docs/reference/: tui_question_to_answer_diagrams.md  tui_update.md
engines/llm/: openai_compatible_engine.py
engines/vad/: silero_vad_engine.py
engines/wake_word/: openwakeword_engine.py
fonts/: README.md  check_fonts.ps1  install_nerd_font.py  test_icons.py
memory/: __init__.py  cache.py  documents.py  embeddings.py  entity_extractor.py  kuzu_manager.py  kuzu_retriever.py  kuzu_store.py  kuzu_writer.py  md_gate.py  storage.py
tests/: test_agent_core.py  test_agent_core_orchestration.py  test_agent_core_tool_guard.py  test_agent_evidence_integration.py  test_agent_orchestration.py  test_builtin_tools.py  test_memory_cache.py  test_memory_documents.py  test_memory_md_gate.py  test_memory_pipeline.py  test_memory_recall_quality.py  test_memory_storage.py  test_memory_system_storage.py  test_query_memory_tool.py  test_session_manager.py  test_settings_orchestration.py  test_text_api_memory.py  test_tool_system.py
tools/: __init__.py  base.py  mcp_client.py  registry.py
tools/builtin/: __init__.py  bash.py  edit_file.py  execute_shell.py  file_operations.py  query_memory.py  read_file.py  search_web.py  super_search.py  write_file.py
(+13 files in other folders)
